--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,18 +28,18 @@
     <string name="empty_no_requests">No pending delivery requests at the moment.</string>
 
     <!-- Notification Channels -->
-    <string name="default_notification_channel_id">smallbasket_default</string>
-    <string name="order_updates_channel_id">order_updates</string>
-    <string name="order_updates_channel_name">Order Updates</string>
-    <string name="order_updates_channel_description">Get notified about your order status</string>
+    <string name="default_notification_channel_id">small_basket_default</string>
+    <string name="channel_new_requests_id">new_delivery_requests</string>
+    <string name="channel_new_requests_name">New Delivery Requests</string>
+    <string name="channel_new_requests_description">Notifications for new delivery opportunities</string>
 
-    <string name="delivery_updates_channel_id">delivery_updates</string>
-    <string name="delivery_updates_channel_name">Delivery Updates</string>
-    <string name="delivery_updates_channel_description">Updates about deliveries you\'re handling</string>
+    <string name="channel_order_updates_id">order_updates</string>
+    <string name="channel_order_updates_name">Order Updates</string>
+    <string name="channel_order_updates_description">Updates on your orders and deliveries</string>
 
-    <string name="promotional_channel_id">promotional</string>
-    <string name="promotional_channel_name">Promotional</string>
-    <string name="promotional_channel_description">Special offers and reminders</string>
+    <string name="channel_general_id">general</string>
+    <string name="channel_general_name">General</string>
+    <string name="channel_general_description">General app notifications</string>
 
     <!-- Updated to match backend areas.py PREDEFINED_AREAS -->
     <string-array name="location_areas">
@@ -58,4 +58,6 @@
         <item>2 hr</item>
         <item>Custom (Hrs &amp; Mins)</item>
     </string-array>
+
+
 </resources>
